# internship_project

./: LICENSE  pyproject.toml  readme.md  requirements.txt  resource_links.txt  roadmap.txt
notebooks/: experiments_phase10.ipynb  experiments_phase5.ipynb  experiments_phase6.ipynb  experiments_phase7.ipynb  experiments_phase8.ipynb  experiments_phase9.ipynb  functions.py
src/: functions.py  graph.py  nodes.py  prompts.py  schemas.py
