[project]
name = "internship-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago Cardenas",email = "scardenasc22@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.4"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-groq (>=0.3.8,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "langchain-tavily (>=0.2.11,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
